EKS/trade-booking-microservices/chapter-02/02-deploymeny-artifacts-and-docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trading-ingress
  namespace: trading-dev
  annotations:

    alb.ingress.kubernetes.io/group.name: trading-group
    
    # ALB setup
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # Health check (important)
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health

    # Listener (HTTP only since you're testing)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb
  rules:
    - host: api.javalearners.in
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: trading-api-gateway
                port:
                  number: 8080
