EKS/trade-booking-microservices/chapter-02/02-deploymeny-artifacts-and-docs/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trading-ui-ingress
  namespace: trading-dev
  annotations:
    alb.ingress.kubernetes.io/group.name: trading-group   # Same ALB
    
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb
  rules:
    - host: ui.javalearners.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trade-monitor-ui   # Your Angular service
                port:
                  number: 80
